# debian

./: .bash_aliases  25-nvidia.conf  README.md  aaa-add-ppa  aaa-get-build-deps  aaa-install-all  aaa-mount-android-ext4-image  aaa-script-ref  aaa-script-ref2
QtADB_0.8.1_linux64/: QtADB
Wifi Metropolis 3/: README.TXT
aaa-admin-scripts/: INSTALL  aaa-aliases  aaa-axel  aaa-kali-pkg-check  aaa-launch-fallback  aaa-linkup  aaa-mem-info  aaa-mod-deps  aaa-nessus  aaa-samba  aaa-screen
aaa-admin-scripts_0.1/: aaa-conky  aaa-filezilla  aaa-geany  aaa-hyperion  aaa-kali-pkg-check  aaa-linkup  aaa-meld  aaa-mixed-a  aaa-openvas  aaa-pupvm-install  aaa-terminator  aaa-tmux
aaa-build-scripts/: INSTALL  Makefile  aaa-build  aaa-build-cinnamon  aaa-build-cinnamon-pbuilder-git  aaa-build-compiz-emerald  aaa-build-kali-fixes  aaa-build-pupvm  aaa-build-root-only-packages  aaa-linkup
aaa-build-scripts_0.1/: 142DPI.patch  Makefile  aaa-build  aaa-build-cinnamon  aaa-build-cinnamon-pbuilder  aaa-build-cinnamon-pbuilder-git  aaa-build-cinnamon-pbuilder-release  aaa-build-compiz-emerald  aaa-common-functions  aaa-doc  aaa-install-cinnamon  aaa-linkup  aaa-linkup-remove  aaa-master-config  aaa-setup-build-env  aaa-setup-tmpfs  convert_to_debian.patch  deb.list
aaa-env/: aaa-common-functions  aaa-linkup  aaa-master-config  aaa-setup-build-base  aaa-setup-build-env  timeshift_no_gksu.patch
aaa-env_0.1/: aaa-common-functions  aaa-linkup  aaa-master-config  aaa-setup-build-base
aaa-kali-0.01/: Makefile  aaa-build  aaa-build-cinnamon-pbuilder  aaa-common-functions  aaa-setup-tmpfs  python2_kali.patch.legacy  remove_elevated_privelages_banner-patch
aaa-nemo-actions/: aaa-qemu-ndb-mount  mount-virtual-disk.nemo_action  unsquash_fs.nemo_action
aaa-nemo-actions_0.1/: mount-android-image.nemo_action
admin-scripts/: aaa-metaspoilt  aaa-mixed-b  aaa-ssh  aaa-terminal  aaa-wordlists  aaa-xfce4
arch-dev-platform-debian/: pacman-4.1.2-1-x86_64.pkg.tar.xz  pacman-mirrorlist-20130830-1-any.pkg.tar.xz
awn/: avant-window-navigator-data_0.4.1~bzr830-2ubuntu1_all.deb  avant-window-navigator_0.4.1~bzr830-2ubuntu1_amd64.modfied.deb  awn-applet-awn-notification-daemon_0.4.1~bzr1507-0ubuntu7_amd64.modfied.deb  awn-applet-awn-system-monitor_0.4.1~bzr1507-0ubuntu7_amd64.deb  awn-applet-awnterm_0.4.1~bzr1507-0ubuntu7_amd64.deb  awn-applet-battery-applet_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applet-cairo-clock_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applet-cairo-main-menu_0.4.1~bzr1507-0ubuntu7_amd64.deb  awn-applet-calendar_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applet-common-folder_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applet-cpufreq_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applet-digital-clock_0.4.1~bzr1507-0ubuntu7_amd64.deb  awn-applet-file-browser-launcher_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applet-garbage_0.4.1~bzr1507-0ubuntu7_amd64.deb  awn-applet-hardware-sensors_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applet-indicator_0.4.1~bzr1507-0ubuntu7_amd64.deb  awn-applet-main-menu_0.4.1~bzr1507-0ubuntu7_amd64.deb  awn-applet-media-control_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applet-media-icon-applet_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applet-media-player_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applet-notification-area_0.4.1~bzr1507-0ubuntu7_amd64.deb  awn-applet-pandora_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applet-places_0.4.1~bzr1507-0ubuntu7_amd64.deb  awn-applet-quit-applet_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applet-related_0.4.1~bzr1507-0ubuntu7_amd64.deb  awn-applet-shinyswitcher_0.4.1~bzr1507-0ubuntu7_amd64.deb  awn-applet-showdesktop_0.4.1~bzr1507-0ubuntu7_amd64.deb  awn-applet-slickswitcher_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applet-stack_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applet-sysmon_0.4.1~bzr1507-0ubuntu7_amd64.deb  awn-applet-thinkhdaps_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applet-volume-control_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applet-wm_0.8-0~webupd8~natty_all.deb  awn-applet-yama_0.4.1~bzr1507-0ubuntu7_all.deb  awn-applets-common_0.4.1~bzr1507-0ubuntu7_all.deb  awn-settings_0.4.1~bzr830-2ubuntu1_all.deb  libawn-dev_0.4.1~bzr830-2ubuntu1_amd64.deb  libawn-doc_0.4.1~bzr830-2ubuntu1_all.deb  libawn1-dbg_0.4.1~bzr830-2ubuntu1_amd64.deb  libawn1_0.4.1~bzr830-2ubuntu1_amd64.deb  (+2 more)
connman/: connman_1.16-0ubuntu0.1.dsc  connman_1.16.orig.tar.xz  (+1 more)
connman-ui/: connman-ui_0~20130115-1_amd64.deb
desktop_drive_icons/desktop_drive_icons_0.0.5/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
desktop_drive_icons/desktop_drive_icons_0.0.5/po/: POTFILES.in
desktop_drive_icons/desktop_drive_icons_0.0.5/src/: Makefile.am  Makefile.in  common.h  desklet.c  desklet.h  icon-label.c  icon-label.h  icon-view.c  icon-view.h  icon.c  icon.h  main.c  operation.c  operation.h  settings.c  settings.h
pup-volume-monitor/building/pup-volume-monitor-0.1.15/module/: Makefile.am  Makefile.in  client-monitor.c  client-monitor.h  common.h  mount.c  volume-monitor.h  volume.h
pup-volume-monitor/building/pup-volume-monitor-0.1.15/tester/: Makefile.am  Makefile.in  client.c  gio-testing.c  server.c
pup-volume-monitor/pup-volume-monitor-0.1.15/: aclocal.m4  configure  configure.ac
pup-volume-monitor/pup-volume-monitor-0.1.15/admin/: Makefile.am  Makefile.in  main.c
pup-volume-monitor/pup-volume-monitor-0.1.15/daemon/: Makefile.am  drive-probes.c  monitor.c  operations.c  operations.h
pup-volume-monitor/pup-volume-monitor-0.1.15/data/: Makefile.am  Makefile.in  main.conf  mount  pupvm.pc.in
pup-volume-monitor/pup-volume-monitor-0.1.15/debian/: changelog  copyright  postrm  pup-volume-monitor.install  rules
pup-volume-monitor/pup-volume-monitor-0.1.15/libpupvm/: Makefile.am  common-includes.h  conv.c  core.c  protocol.c  pupvm-monitor.h  pupvm-settings.c  pupvm-settings.h  pupvm-utils.c  pupvm-utils.h  socket.h  utils.c
pup-volume-monitor/pup-volume-monitor-0.1.15/module/: drive.c  drive.h  main.c  mount.h  utils.c  utils.h  volume-monitor.c  volume.c
pup-volume-monitor/pup-volume-monitor-0.1.15/plugins/: Makefile.am  Makefile.in  cdrom.c
pup-volume-monitor/pup-volume-monitor-0.1.15/tester/: misc-testing.c
(+213 files in other folders)
